NN add, corr matrix, deeper insight into match and decisions corr

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -15,8 +15,8 @@
    "id": "4304a662",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:43.830865Z",
-     "start_time": "2025-11-02T17:39:43.824832Z"
+     "end_time": "2025-11-02T20:44:02.391753Z",
+     "start_time": "2025-11-02T20:44:02.383883Z"
     }
    },
    "source": [
@@ -26,18 +26,32 @@
     "import seaborn as sns\n",
     "\n",
     "# import scipy.stats as stats\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from sympy import timed\n"
    ],
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T20:44:02.464658Z",
+     "start_time": "2025-11-02T20:44:02.457915Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.random.seed(0)",
+   "id": "d83cef0f4a5df5fc",
+   "outputs": [],
+   "execution_count": 44
   },
   {
    "cell_type": "code",
    "id": "c0b37633",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:43.893585Z",
-     "start_time": "2025-11-02T17:39:43.887543Z"
+     "end_time": "2025-11-02T20:44:02.529410Z",
+     "start_time": "2025-11-02T20:44:02.521734Z"
     }
    },
    "source": [
@@ -50,21 +64,21 @@
     "# https://wandb.ai/bizon-mimi-stu/ZNEUS_project1/workspace?nw=nwuserbizonmimi"
    ],
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 45
   },
   {
    "cell_type": "code",
    "id": "9725bd0a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:43.952142Z",
-     "start_time": "2025-11-02T17:39:43.944465Z"
+     "end_time": "2025-11-02T20:44:02.602612Z",
+     "start_time": "2025-11-02T20:44:02.591340Z"
     }
    },
    "source": [
-    "'''# wandb test\n",
+    "# wandb test\n",
     "import random\n",
-    "\n",
+    "'''\n",
     "# Start a new wandb run to track this script.\n",
     "run = wandb.init(\n",
     "    entity=\"bizon-mimi-stu\",  # team name\n",
@@ -90,29 +104,19 @@
     "\n",
     "# Finish the run and upload any remaining data.\n",
     "run.finish()\n",
-    "'''"
+    "'''\n",
+    "random.seed(0)"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'# wandb test\\nimport random\\n\\n# Start a new wandb run to track this script.\\nrun = wandb.init(\\n    entity=\"bizon-mimi-stu\",  # team name\\n    project=\"ZNEUS_project1\",  # project name\\n    # Track hyperparameters and run metadata.\\n    config={\\n        \"learning_rate\": 0.02,\\n        \"architecture\": \"CNN\",\\n        \"dataset\": \"CIFAR-100\",\\n        \"epochs\": 10,\\n    },\\n)\\n\\n# Simulate training.\\nepochs = 10\\noffset = random.random() / 5\\nfor epoch in range(2, epochs):\\n    acc = 1 - 2**-epoch - random.random() / epoch - offset\\n    loss = 2**-epoch + random.random() / epoch + offset\\n\\n    # Log metrics to wandb.\\n    run.log({\"acc\": acc, \"loss\": loss})\\n\\n# Finish the run and upload any remaining data.\\nrun.finish()\\n'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 51
+   "outputs": [],
+   "execution_count": 46
   },
   {
    "cell_type": "code",
    "id": "6ec6dedd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:44.196144Z",
-     "start_time": "2025-11-02T17:39:44.031891Z"
+     "end_time": "2025-11-02T20:44:02.857969Z",
+     "start_time": "2025-11-02T20:44:02.664930Z"
     }
    },
    "source": [
@@ -124,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_21872\\2836534185.py:1: DtypeWarning: Columns (3,10,11,15,16,17,18,19,39,40,41,42,43,44,51,52,53,54,55,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,107,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_12192\\2836534185.py:1: DtypeWarning: Columns (3,10,11,15,16,17,18,19,39,40,41,42,43,44,51,52,53,54,55,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,107,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_dating = pd.read_csv(\"DATA/.ipynb_checkpoints/speeddating-checkpoint.csv\")\n"
      ]
     },
@@ -482,35 +486,35 @@
        "</div>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 52
+   "execution_count": 47
   },
   {
    "cell_type": "code",
    "id": "6a96c3ca-9b1e-41be-9a41-6685feb5b124",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:44.386191Z",
-     "start_time": "2025-11-02T17:39:44.310152Z"
+     "end_time": "2025-11-02T20:44:03.177852Z",
+     "start_time": "2025-11-02T20:44:03.094466Z"
     }
    },
    "source": [
     "df_dating.replace(\"?\", np.nan, inplace=True)"
    ],
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 48
   },
   {
    "cell_type": "code",
    "id": "1a5bf7c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:44.492755Z",
-     "start_time": "2025-11-02T17:39:44.484417Z"
+     "end_time": "2025-11-02T20:44:03.318440Z",
+     "start_time": "2025-11-02T20:44:03.309583Z"
     }
    },
    "source": [
@@ -523,20 +527,20 @@
        "(8378, 123)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 49
   },
   {
    "cell_type": "code",
    "id": "fe2c157fdc8d04ad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:44.633758Z",
-     "start_time": "2025-11-02T17:39:44.619744Z"
+     "end_time": "2025-11-02T20:44:03.745909Z",
+     "start_time": "2025-11-02T20:44:03.722867Z"
     }
    },
    "source": [
@@ -614,20 +618,20 @@
        "[8378 rows x 123 columns]>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 55
+   "execution_count": 50
   },
   {
    "cell_type": "code",
    "id": "d8fa32a2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.058007Z",
-     "start_time": "2025-11-02T17:39:45.043726Z"
+     "end_time": "2025-11-02T20:44:04.037021Z",
+     "start_time": "2025-11-02T20:44:04.021330Z"
     }
    },
    "source": [
@@ -771,15 +775,15 @@
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 51
   },
   {
    "cell_type": "code",
    "id": "238ea2ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.321650Z",
-     "start_time": "2025-11-02T17:39:45.232650Z"
+     "end_time": "2025-11-02T20:44:04.395363Z",
+     "start_time": "2025-11-02T20:44:04.283109Z"
     }
    },
    "source": [
@@ -853,30 +857,30 @@
      ]
     }
    ],
-   "execution_count": 57
+   "execution_count": 52
   },
   {
    "cell_type": "code",
    "id": "ebf75673",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.399606Z",
-     "start_time": "2025-11-02T17:39:45.384532Z"
+     "end_time": "2025-11-02T20:44:04.654865Z",
+     "start_time": "2025-11-02T20:44:04.634694Z"
     }
    },
    "source": [
     "df_dating = df_dating.drop(columns=\"expected_num_interested_in_me\")"
    ],
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 53
   },
   {
    "cell_type": "code",
    "id": "b0ed513f-cc23-4c5a-af31-57bc21b8db1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.506018Z",
-     "start_time": "2025-11-02T17:39:45.435541Z"
+     "end_time": "2025-11-02T20:44:04.822509Z",
+     "start_time": "2025-11-02T20:44:04.730250Z"
     }
    },
    "source": [
@@ -896,15 +900,15 @@
      ]
     }
    ],
-   "execution_count": 59
+   "execution_count": 54
   },
   {
    "cell_type": "code",
    "id": "5266a417-be90-439b-be5a-170286b35771",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.626783Z",
-     "start_time": "2025-11-02T17:39:45.607536Z"
+     "end_time": "2025-11-02T20:44:05.019342Z",
+     "start_time": "2025-11-02T20:44:04.996339Z"
     }
    },
    "source": [
@@ -932,15 +936,15 @@
      ]
     }
    ],
-   "execution_count": 60
+   "execution_count": 55
   },
   {
    "cell_type": "code",
    "id": "1cb1dc903d1c86b6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.725963Z",
-     "start_time": "2025-11-02T17:39:45.718693Z"
+     "end_time": "2025-11-02T20:44:05.236277Z",
+     "start_time": "2025-11-02T20:44:05.224963Z"
     }
    },
    "source": [
@@ -953,20 +957,20 @@
        "array(['[21-100]', '[16-20]', '[0-15]'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 61
+   "execution_count": 56
   },
   {
    "cell_type": "code",
    "id": "5a4243359840f883",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.792150Z",
-     "start_time": "2025-11-02T17:39:45.784962Z"
+     "end_time": "2025-11-02T20:44:05.556859Z",
+     "start_time": "2025-11-02T20:44:05.543912Z"
     }
    },
    "source": [
@@ -979,20 +983,20 @@
        "array(['[4-6]', '[0-1]', '[2-3]', '[7-37]'], dtype=object)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 62
+   "execution_count": 57
   },
   {
    "cell_type": "code",
    "id": "201905f3c77f919c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:45.859010Z",
-     "start_time": "2025-11-02T17:39:45.851624Z"
+     "end_time": "2025-11-02T20:44:05.816609Z",
+     "start_time": "2025-11-02T20:44:05.806049Z"
     }
    },
    "source": [
@@ -1005,12 +1009,12 @@
        "array(['[2-5]', '[0-1]', '[6-10]'], dtype=object)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 63
+   "execution_count": 58
   },
   {
    "cell_type": "markdown",
@@ -1025,8 +1029,8 @@
    "id": "b78575c3-66c3-4e65-bead-2f2267856ccd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:46.009273Z",
-     "start_time": "2025-11-02T17:39:45.983881Z"
+     "end_time": "2025-11-02T20:44:06.004029Z",
+     "start_time": "2025-11-02T20:44:05.975377Z"
     }
    },
    "source": [
@@ -1170,20 +1174,20 @@
        "</div>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 64
+   "execution_count": 59
   },
   {
    "cell_type": "code",
    "id": "d0bab5cb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:46.282257Z",
-     "start_time": "2025-11-02T17:39:46.100837Z"
+     "end_time": "2025-11-02T20:44:06.377467Z",
+     "start_time": "2025-11-02T20:44:06.149301Z"
     }
    },
    "source": [
@@ -1328,15 +1332,15 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 60
   },
   {
    "cell_type": "code",
    "id": "1d9e8aa1-0ed1-49b0-9b99-bf1b0b38c175",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:46.445611Z",
-     "start_time": "2025-11-02T17:39:46.320927Z"
+     "end_time": "2025-11-02T20:44:06.763050Z",
+     "start_time": "2025-11-02T20:44:06.577269Z"
     }
    },
    "source": [
@@ -1448,15 +1452,15 @@
      ]
     }
    ],
-   "execution_count": 66
+   "execution_count": 61
   },
   {
    "cell_type": "code",
    "id": "4e84d652-5dd5-4c11-8695-b6faf6655db5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:46.656928Z",
-     "start_time": "2025-11-02T17:39:46.521660Z"
+     "end_time": "2025-11-02T20:44:07.086090Z",
+     "start_time": "2025-11-02T20:44:06.926103Z"
     }
    },
    "source": [
@@ -1476,15 +1480,15 @@
     "    df_dating[categorical_cols] = imputer_cat.fit_transform(df_dating[categorical_cols])\n"
    ],
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 62
   },
   {
    "cell_type": "code",
    "id": "7116eb91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:46.829723Z",
-     "start_time": "2025-11-02T17:39:46.700316Z"
+     "end_time": "2025-11-02T20:44:07.319484Z",
+     "start_time": "2025-11-02T20:44:07.153638Z"
     }
    },
    "source": [
@@ -1539,15 +1543,15 @@
      ]
     }
    ],
-   "execution_count": 68
+   "execution_count": 63
   },
   {
    "cell_type": "code",
    "id": "45ebd230",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:46.914695Z",
-     "start_time": "2025-11-02T17:39:46.878971Z"
+     "end_time": "2025-11-02T20:44:07.487287Z",
+     "start_time": "2025-11-02T20:44:07.441613Z"
     }
    },
    "source": "df_dating.head(20)",
@@ -2152,20 +2156,20 @@
        "</div>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 64
   },
   {
    "cell_type": "code",
    "id": "848ad745",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:47.024899Z",
-     "start_time": "2025-11-02T17:39:47.013720Z"
+     "end_time": "2025-11-02T20:44:07.640073Z",
+     "start_time": "2025-11-02T20:44:07.630134Z"
     }
    },
    "source": [
@@ -2178,20 +2182,20 @@
        "array([2., 1., 0.])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 65
   },
   {
    "cell_type": "code",
    "id": "64d5b9ac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:47.169789Z",
-     "start_time": "2025-11-02T17:39:47.159759Z"
+     "end_time": "2025-11-02T20:44:07.850016Z",
+     "start_time": "2025-11-02T20:44:07.838431Z"
     }
    },
    "source": [
@@ -2204,18 +2208,18 @@
        "array([2., 0., 1., 3.])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 66
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T18:47:16.474836Z",
-     "start_time": "2025-11-02T18:47:16.464857Z"
+     "end_time": "2025-11-02T20:44:08.018431Z",
+     "start_time": "2025-11-02T20:44:08.007496Z"
     }
    },
    "cell_type": "code",
@@ -2339,20 +2343,20 @@
        "       \"'General management/finance'\", \"'Climate Dynamics'\"], dtype=object)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 81
+   "execution_count": 67
   },
   {
    "cell_type": "code",
    "id": "d2b49670",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:39:47.205078Z",
-     "start_time": "2025-11-02T17:39:47.196273Z"
+     "end_time": "2025-11-02T20:44:08.639020Z",
+     "start_time": "2025-11-02T20:44:08.629380Z"
     }
    },
    "source": [
@@ -2365,12 +2369,12 @@
        "array([1., 0., 2.])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 72
+   "execution_count": 68
   },
   {
    "cell_type": "markdown",
@@ -2383,8 +2387,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:56:11.155065Z",
-     "start_time": "2025-11-02T17:56:10.259197Z"
+     "end_time": "2025-11-02T20:44:09.962183Z",
+     "start_time": "2025-11-02T20:44:08.826451Z"
     }
    },
    "cell_type": "code",
@@ -2411,13 +2415,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 80
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:41:05.010056Z",
-     "start_time": "2025-11-02T17:41:05.001317Z"
+     "end_time": "2025-11-02T20:44:10.038143Z",
+     "start_time": "2025-11-02T20:44:10.025983Z"
     }
    },
    "cell_type": "code",
@@ -2450,18 +2454,18 @@
        "Name: decision, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 74
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:41:07.782602Z",
-     "start_time": "2025-11-02T17:41:07.772735Z"
+     "end_time": "2025-11-02T20:44:10.162662Z",
+     "start_time": "2025-11-02T20:44:10.147791Z"
     }
    },
    "cell_type": "code",
@@ -2494,18 +2498,18 @@
        "Name: decision_o, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T17:42:21.261732Z",
-     "start_time": "2025-11-02T17:42:21.252790Z"
+     "end_time": "2025-11-02T20:44:10.274490Z",
+     "start_time": "2025-11-02T20:44:10.261235Z"
     }
    },
    "cell_type": "code",
@@ -2538,18 +2542,18 @@
        "Name: match, dtype: float64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 79
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:25:43.275588Z",
-     "start_time": "2025-11-02T20:25:43.261216Z"
+     "end_time": "2025-11-02T20:46:15.200230Z",
+     "start_time": "2025-11-02T20:46:15.188298Z"
     }
    },
    "cell_type": "code",
@@ -2559,24 +2563,24 @@
     "X = df_dating[['decision', 'decision_o']].values  # input features\n",
     "y = df_dating['match'].values\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n"
    ],
    "id": "4af9a55192fc8db9",
    "outputs": [],
-   "execution_count": 93
+   "execution_count": 80
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:25:58.595552Z",
-     "start_time": "2025-11-02T20:25:58.247114Z"
+     "end_time": "2025-11-02T20:46:30.245914Z",
+     "start_time": "2025-11-02T20:46:29.509307Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from NN import train_model, evaluate_model\n",
     "\n",
-    "model, scaler = train_model(X_train, y_train, num_epochs=50)\n",
+    "model, scaler = train_model(X_train, y_train, num_epochs=100)\n",
     "accuracy = evaluate_model(model, scaler, X_test, y_test)\n",
     "\n",
     "print(f'Test accuracy: {accuracy:.4f}')"
@@ -2587,11 +2591,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.8288\n"
+      "Test accuracy: 1.0000\n"
      ]
     }
    ],
-   "execution_count": 104
+   "execution_count": 89
   }
  ],
  "metadata": {
