--- a/project1.ipynb
+++ b/project1.ipynb
@@ -15,8 +15,8 @@
    "id": "4304a662",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:02.391753Z",
-     "start_time": "2025-11-02T20:44:02.383883Z"
+     "end_time": "2025-11-02T21:05:04.543261Z",
+     "start_time": "2025-11-02T21:05:03.674109Z"
     }
    },
    "source": [
@@ -30,28 +30,28 @@
     "from sympy import timed\n"
    ],
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:02.464658Z",
-     "start_time": "2025-11-02T20:44:02.457915Z"
+     "end_time": "2025-11-02T21:05:04.558765Z",
+     "start_time": "2025-11-02T21:05:04.550851Z"
     }
    },
    "cell_type": "code",
    "source": "np.random.seed(0)",
    "id": "d83cef0f4a5df5fc",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "c0b37633",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:02.529410Z",
-     "start_time": "2025-11-02T20:44:02.521734Z"
+     "end_time": "2025-11-02T21:05:04.873640Z",
+     "start_time": "2025-11-02T21:05:04.863110Z"
     }
    },
    "source": [
@@ -64,15 +64,15 @@
     "# https://wandb.ai/bizon-mimi-stu/ZNEUS_project1/workspace?nw=nwuserbizonmimi"
    ],
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "9725bd0a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:02.602612Z",
-     "start_time": "2025-11-02T20:44:02.591340Z"
+     "end_time": "2025-11-02T21:05:04.913925Z",
+     "start_time": "2025-11-02T21:05:04.905906Z"
     }
    },
    "source": [
@@ -108,15 +108,15 @@
     "random.seed(0)"
    ],
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "6ec6dedd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:02.857969Z",
-     "start_time": "2025-11-02T20:44:02.664930Z"
+     "end_time": "2025-11-02T21:05:05.146038Z",
+     "start_time": "2025-11-02T21:05:04.971515Z"
     }
    },
    "source": [
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_12192\\2836534185.py:1: DtypeWarning: Columns (3,10,11,15,16,17,18,19,39,40,41,42,43,44,51,52,53,54,55,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,107,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_33644\\2836534185.py:1: DtypeWarning: Columns (3,10,11,15,16,17,18,19,39,40,41,42,43,44,51,52,53,54,55,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,107,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_dating = pd.read_csv(\"DATA/.ipynb_checkpoints/speeddating-checkpoint.csv\")\n"
      ]
     },
@@ -486,35 +486,35 @@
        "</div>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 47
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "id": "6a96c3ca-9b1e-41be-9a41-6685feb5b124",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:03.177852Z",
-     "start_time": "2025-11-02T20:44:03.094466Z"
+     "end_time": "2025-11-02T21:05:05.351476Z",
+     "start_time": "2025-11-02T21:05:05.270593Z"
     }
    },
    "source": [
     "df_dating.replace(\"?\", np.nan, inplace=True)"
    ],
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "1a5bf7c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:03.318440Z",
-     "start_time": "2025-11-02T20:44:03.309583Z"
+     "end_time": "2025-11-02T21:05:05.658315Z",
+     "start_time": "2025-11-02T21:05:05.650037Z"
     }
    },
    "source": [
@@ -527,20 +527,20 @@
        "(8378, 123)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "fe2c157fdc8d04ad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:03.745909Z",
-     "start_time": "2025-11-02T20:44:03.722867Z"
+     "end_time": "2025-11-02T21:05:06.189081Z",
+     "start_time": "2025-11-02T21:05:06.172638Z"
     }
    },
    "source": [
@@ -618,20 +618,20 @@
        "[8378 rows x 123 columns]>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "d8fa32a2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:04.037021Z",
-     "start_time": "2025-11-02T20:44:04.021330Z"
+     "end_time": "2025-11-02T21:05:06.395872Z",
+     "start_time": "2025-11-02T21:05:06.380751Z"
     }
    },
    "source": [
@@ -775,15 +775,15 @@
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "id": "238ea2ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:04.395363Z",
-     "start_time": "2025-11-02T20:44:04.283109Z"
+     "end_time": "2025-11-02T21:05:06.678606Z",
+     "start_time": "2025-11-02T21:05:06.563967Z"
     }
    },
    "source": [
@@ -857,30 +857,30 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "ebf75673",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:04.654865Z",
-     "start_time": "2025-11-02T20:44:04.634694Z"
+     "end_time": "2025-11-02T21:05:06.724093Z",
+     "start_time": "2025-11-02T21:05:06.705456Z"
     }
    },
    "source": [
     "df_dating = df_dating.drop(columns=\"expected_num_interested_in_me\")"
    ],
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "b0ed513f-cc23-4c5a-af31-57bc21b8db1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:04.822509Z",
-     "start_time": "2025-11-02T20:44:04.730250Z"
+     "end_time": "2025-11-02T21:05:06.864163Z",
+     "start_time": "2025-11-02T21:05:06.778580Z"
     }
    },
    "source": [
@@ -900,15 +900,15 @@
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "id": "5266a417-be90-439b-be5a-170286b35771",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:05.019342Z",
-     "start_time": "2025-11-02T20:44:04.996339Z"
+     "end_time": "2025-11-02T21:05:06.944778Z",
+     "start_time": "2025-11-02T21:05:06.925135Z"
     }
    },
    "source": [
@@ -936,15 +936,15 @@
      ]
     }
    ],
-   "execution_count": 55
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "id": "1cb1dc903d1c86b6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:05.236277Z",
-     "start_time": "2025-11-02T20:44:05.224963Z"
+     "end_time": "2025-11-02T21:05:06.997301Z",
+     "start_time": "2025-11-02T21:05:06.986296Z"
     }
    },
    "source": [
@@ -957,20 +957,20 @@
        "array(['[21-100]', '[16-20]', '[0-15]'], dtype=object)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 56
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "id": "5a4243359840f883",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:05.556859Z",
-     "start_time": "2025-11-02T20:44:05.543912Z"
+     "end_time": "2025-11-02T21:05:07.094520Z",
+     "start_time": "2025-11-02T21:05:07.085912Z"
     }
    },
    "source": [
@@ -983,20 +983,20 @@
        "array(['[4-6]', '[0-1]', '[2-3]', '[7-37]'], dtype=object)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 57
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "id": "201905f3c77f919c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:05.816609Z",
-     "start_time": "2025-11-02T20:44:05.806049Z"
+     "end_time": "2025-11-02T21:05:07.174326Z",
+     "start_time": "2025-11-02T21:05:07.164812Z"
     }
    },
    "source": [
@@ -1009,12 +1009,12 @@
        "array(['[2-5]', '[0-1]', '[6-10]'], dtype=object)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 58
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -1029,8 +1029,8 @@
    "id": "b78575c3-66c3-4e65-bead-2f2267856ccd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:06.004029Z",
-     "start_time": "2025-11-02T20:44:05.975377Z"
+     "end_time": "2025-11-02T21:05:07.282703Z",
+     "start_time": "2025-11-02T21:05:07.250300Z"
     }
    },
    "source": [
@@ -1174,20 +1174,20 @@
        "</div>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 59
+   "execution_count": 17
   },
   {
    "cell_type": "code",
    "id": "d0bab5cb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:06.377467Z",
-     "start_time": "2025-11-02T20:44:06.149301Z"
+     "end_time": "2025-11-02T21:05:07.800067Z",
+     "start_time": "2025-11-02T21:05:07.371687Z"
     }
    },
    "source": [
@@ -1332,15 +1332,15 @@
      ]
     }
    ],
-   "execution_count": 60
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "id": "1d9e8aa1-0ed1-49b0-9b99-bf1b0b38c175",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:06.763050Z",
-     "start_time": "2025-11-02T20:44:06.577269Z"
+     "end_time": "2025-11-02T21:05:08.021899Z",
+     "start_time": "2025-11-02T21:05:07.849243Z"
     }
    },
    "source": [
@@ -1452,15 +1452,15 @@
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "id": "4e84d652-5dd5-4c11-8695-b6faf6655db5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:07.086090Z",
-     "start_time": "2025-11-02T20:44:06.926103Z"
+     "end_time": "2025-11-02T21:05:08.510476Z",
+     "start_time": "2025-11-02T21:05:08.119953Z"
     }
    },
    "source": [
@@ -1480,15 +1480,15 @@
     "    df_dating[categorical_cols] = imputer_cat.fit_transform(df_dating[categorical_cols])\n"
    ],
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 20
   },
   {
    "cell_type": "code",
    "id": "7116eb91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:07.319484Z",
-     "start_time": "2025-11-02T20:44:07.153638Z"
+     "end_time": "2025-11-02T21:05:08.695382Z",
+     "start_time": "2025-11-02T21:05:08.550334Z"
     }
    },
    "source": [
@@ -1543,15 +1543,15 @@
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 21
   },
   {
    "cell_type": "code",
    "id": "45ebd230",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:07.487287Z",
-     "start_time": "2025-11-02T20:44:07.441613Z"
+     "end_time": "2025-11-02T21:05:08.829790Z",
+     "start_time": "2025-11-02T21:05:08.786130Z"
     }
    },
    "source": "df_dating.head(20)",
@@ -2156,20 +2156,20 @@
        "</div>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 64
+   "execution_count": 22
   },
   {
    "cell_type": "code",
    "id": "848ad745",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:07.640073Z",
-     "start_time": "2025-11-02T20:44:07.630134Z"
+     "end_time": "2025-11-02T21:05:08.950018Z",
+     "start_time": "2025-11-02T21:05:08.939888Z"
     }
    },
    "source": [
@@ -2182,20 +2182,20 @@
        "array([2., 1., 0.])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 65
+   "execution_count": 23
   },
   {
    "cell_type": "code",
    "id": "64d5b9ac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:07.850016Z",
-     "start_time": "2025-11-02T20:44:07.838431Z"
+     "end_time": "2025-11-02T21:05:09.122461Z",
+     "start_time": "2025-11-02T21:05:09.113288Z"
     }
    },
    "source": [
@@ -2208,18 +2208,18 @@
        "array([2., 0., 1., 3.])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 66
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:08.018431Z",
-     "start_time": "2025-11-02T20:44:08.007496Z"
+     "end_time": "2025-11-02T21:05:09.165614Z",
+     "start_time": "2025-11-02T21:05:09.154616Z"
     }
    },
    "cell_type": "code",
@@ -2343,20 +2343,20 @@
        "       \"'General management/finance'\", \"'Climate Dynamics'\"], dtype=object)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 67
+   "execution_count": 25
   },
   {
    "cell_type": "code",
    "id": "d2b49670",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:08.639020Z",
-     "start_time": "2025-11-02T20:44:08.629380Z"
+     "end_time": "2025-11-02T21:05:09.467306Z",
+     "start_time": "2025-11-02T21:05:09.455391Z"
     }
    },
    "source": [
@@ -2369,12 +2369,12 @@
        "array([1., 0., 2.])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -2387,8 +2387,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:09.962183Z",
-     "start_time": "2025-11-02T20:44:08.826451Z"
+     "end_time": "2025-11-02T21:05:11.204882Z",
+     "start_time": "2025-11-02T21:05:09.713514Z"
     }
    },
    "cell_type": "code",
@@ -2415,13 +2415,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 69
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:10.038143Z",
-     "start_time": "2025-11-02T20:44:10.025983Z"
+     "end_time": "2025-11-02T21:05:11.269186Z",
+     "start_time": "2025-11-02T21:05:11.257782Z"
     }
    },
    "cell_type": "code",
@@ -2454,18 +2454,18 @@
        "Name: decision, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:10.162662Z",
-     "start_time": "2025-11-02T20:44:10.147791Z"
+     "end_time": "2025-11-02T21:05:11.364855Z",
+     "start_time": "2025-11-02T21:05:11.352913Z"
     }
    },
    "cell_type": "code",
@@ -2498,18 +2498,18 @@
        "Name: decision_o, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:44:10.274490Z",
-     "start_time": "2025-11-02T20:44:10.261235Z"
+     "end_time": "2025-11-02T21:05:11.460977Z",
+     "start_time": "2025-11-02T21:05:11.449772Z"
     }
    },
    "cell_type": "code",
@@ -2542,48 +2542,59 @@
        "Name: match, dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 72
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:46:15.200230Z",
-     "start_time": "2025-11-02T20:46:15.188298Z"
+     "end_time": "2025-11-02T22:45:44.818573Z",
+     "start_time": "2025-11-02T22:45:44.807947Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = df_dating[['decision', 'decision_o']].values  # input features\n",
-    "y = df_dating['match'].values\n",
+    "#predicting='decision'\n",
+    "#X = df_dating[['d_attractive_partner', 'd_funny_partner','d_shared_interests_partner','d_guess_prob_liked','d_sincere_partner','d_intelligence_partner','d_expected_num_matches']].values\n",
+    "\n",
+    "\n",
+    "#predicting='decision_o'\n",
+    "#X = df_dating[['d_attractive_o', 'd_funny_o','d_shared_interests_o','d_sinsere_o','d_intelligence_o','d_ambitous_o','d_guess_prob_liked']].values\n",
+    "\n",
+    "\n",
+    "\n",
+    "predicting='match'\n",
+    "X = df_dating[['d_like', 'd_funny_o','d_funny_partner','d_shared_interests_o','d_shared_interests_partner','d_guess_prob_liked','d_attractive_o','d_attractive_partner']].values\n",
+    "\n",
+    "y = df_dating[predicting].values\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n"
    ],
    "id": "4af9a55192fc8db9",
    "outputs": [],
-   "execution_count": 80
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T20:46:30.245914Z",
-     "start_time": "2025-11-02T20:46:29.509307Z"
+     "end_time": "2025-11-02T22:46:12.485117Z",
+     "start_time": "2025-11-02T22:45:45.764117Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from NN import train_model, evaluate_model\n",
     "\n",
-    "model, scaler = train_model(X_train, y_train, num_epochs=100)\n",
+    "model, scaler = train_model(X_train, y_train, num_epochs=5000)\n",
     "accuracy = evaluate_model(model, scaler, X_test, y_test)\n",
     "\n",
-    "print(f'Test accuracy: {accuracy:.4f}')"
+    "print(f'Test accuracy for {predicting:s}: {accuracy*100:.2f}%')"
    ],
    "id": "c933926213a7548d",
    "outputs": [
@@ -2591,11 +2602,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 1.0000\n"
+      "Test accuracy for match: 84.07%\n"
      ]
     }
    ],
-   "execution_count": 89
+   "execution_count": 68
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "210d46eccabf54d2"
   }
  ],
  "metadata": {
